implemented jwt token security and fixed some bugs
