# src/main/java/com/example/monolithfinancialsystem/api/controller/AccountController.java
@@ -1,6 +1,6 @@
 package com.example.monolithfinancialsystem.api.controller;
 
-import com.example.api.AccountApi;
+import com.example.api.AccountsApi;
 import com.example.model.TransferRequest;
 import com.example.model.TransferResponse;
 import com.example.monolithfinancialsystem.service.processing.account.transfer.AccountTransferFacade;
@@ -10,13 +10,13 @@ import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 @RequiredArgsConstructor
-public class AccountController implements AccountApi {
+public class AccountController implements AccountsApi {
 
     private final AccountTransferFacade accountTransferFacade;
 
     @Override
-    public ResponseEntity<TransferResponse> transfer(TransferRequest transferRequest) {
-        TransferResponse response = accountTransferFacade.transfer(transferRequest);
+    public ResponseEntity<TransferResponse> transfer(String authorization, TransferRequest transferRequest) {
+        TransferResponse response = accountTransferFacade.transfer(authorization, transferRequest);
         return ResponseEntity.ok(response);
     }
 }
