# src/main/java/com/example/monolithfinancialsystem/api/security/filters/JwtAuthenticationFilter.java
@@ -1,0 +1,54 @@
+package com.example.monolithfinancialsystem.api.security.filters;
+
+import com.example.model.ErrorResponse;
+import com.example.monolithfinancialsystem.util.JwtUtil;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Component;
+import org.springframework.web.filter.OncePerRequestFilter;
+
+import javax.servlet.FilterChain;
+import javax.servlet.ServletException;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+import java.io.IOException;
+import java.util.Objects;
+
+@Component
+@RequiredArgsConstructor
+public class JwtAuthenticationFilter extends OncePerRequestFilter {
+
+    public static final String BEARER_PREFIX = "Bearer ";
+    public static final String HEADER_NAME = "Authorization";
+    private final JwtUtil jwtUtil;
+
+    @Override
+    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain) throws ServletException, IOException {
+        String authorizationHeader = request.getHeader(HEADER_NAME);
+        if (Objects.nonNull(authorizationHeader) && authorizationHeader.startsWith(BEARER_PREFIX)) {
+            String token = authorizationHeader.substring(7);
+            boolean isTokenValid = jwtUtil.validateToken(token);
+            if (isTokenValid) {
+                filterChain.doFilter(request, response);
+            } else {
+                setUnauthorizedResponse(response, "Invalid token");
+            }
+        } else {
+            setUnauthorizedResponse(response, "Authorization header is missing or does not start with Bearer");
+        }
+    }
+
+    @Override
+    protected boolean shouldNotFilter(HttpServletRequest request) {
+        String path = request.getRequestURI();
+        return path.equals("/auth/login") || path.startsWith("/swagger") || path.startsWith("/v3/api-docs");
+    }
+
+    private void setUnauthorizedResponse(HttpServletResponse response, String message) throws IOException {
+        ObjectMapper objectMapper = new ObjectMapper();
+        ErrorResponse errorResponse = new ErrorResponse().setMessage(message);
+        response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+        response.setContentType("application/json");
+        response.getWriter().write(objectMapper.writeValueAsString(errorResponse));
+    }
+}
