# src/main/resources/openapi/openapi.yaml
@@ -91,6 +91,11 @@ paths:
           schema:
             type: integer
             format: int64
+        - name: Authorization
+          in: header
+          required: true
+          schema:
+            type: string
       requestBody:
         required: true
         content:
@@ -118,6 +123,11 @@ paths:
           schema:
             type: integer
             format: int64
+        - name: Authorization
+          in: header
+          required: true
+          schema:
+            type: string
       requestBody:
         required: true
         content:
@@ -132,12 +142,18 @@ paths:
               schema:
                $ref: '#/components/schemas/UserPhonesDto'
 
-  /account/transfer:
+  /accounts/transfer:
     post:
       summary: Transfer money
       operationId: transfer
       tags:
         - Account api
+      parameters:
+        - name: Authorization
+          in: header
+          required: true
+          schema:
+            type: string
       requestBody:
         required: true
         content:
